--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Setup WDD230</title>
+    <meta name="description"
+        content="WDD 230 - Web Frontend Development course assignment portal - produced by Deana Briggs - Spring 2024 Term - review and expansion of web development skills">
+    <meta name="author" content="Deana Briggs">
+
+    <link href="styles/base.css" rel="stylesheet">
+    <link href="styles/larger.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <title>Deana Briggs - WDD 230 - Web Frontend</title>
 </head>
 
 <body>
-    <h1>Deana Briggs</h1>
-    <h3>Setup Complete</h3>
-
+    <header>
+        <img id="deana" src="images/me.jpg" alt="picture of Deana" width="100" height="145">
+        <span>Deana Briggs</span>
+    </header>
+    <nav>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="">Chamber</a></li>
+            <li><a href="">Site Plan</a></li>
+            <li><a href="">Form</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>WDD 230: Web Frontend Development</h1>
+        <div class="parent">
+            <section class="card">
+                <h2>Learning Activities</h2>
+                <ul>
+                    <li><a href="">Week 01:</a></li>
+                    <li><a href="">Week 02:</a></li>
+                    <li><a href="">Week 03:</a></li>
+                    <li><a href="">Week 04:</a></li>
+                    <li><a href="">Week 05:</a></li>
+                    <li><a href="">Week 06:</a></li>
+                </ul>
+            </section>
+            <section class="card">
+                <h2>Information</h2>
+                <div></div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; <span id="year"></span> &bull; Deana Briggs &bull; California, USA</p>
+        <p id="lastModified"></p>
+    </footer>
+    <script src="scripts/getDates.js"></script>
 </body>
 
 </html>
