Minor adjustments to improve webpage responsiveness

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         content="WDD 230 - Web Frontend Development course assignment portal - produced by Deana Briggs - Spring 2024 Term - review and expansion of web development skills">
     <meta name="author" content="Deana Briggs">
 
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/larger.css" rel="stylesheet">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;600&display=swap">
+
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
     <title>Deana Briggs - WDD 230 - Web Frontend</title>
 </head>
@@ -55,7 +55,7 @@
         <p>&copy; <span id="year"></span> &bull; Deana Briggs &bull; California, USA</p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getDates.js"></script>
+    <script src="scripts/getDates.js" defer></script>
 </body>
 
 </html>
