Assignment portal edited for audit errors

--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="WDD 230 - Web Frontend Development course assignment portal - produced by Deana Briggs - Spring 2024 Term - review and expansion of web development skills">
+
+    <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development | Deana Briggs | course assignment portal">
     <meta name="author" content="Deana Briggs">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;600&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Laila:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-
-    <title>Deana Briggs - WDD 230 - Web Frontend</title>
 </head>
 
 <body>
