Added # as placeholder for links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <nav>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="">Chamber</a></li>
-            <li><a href="">Site Plan</a></li>
-            <li><a href="">Form</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="#">Site Plan</a></li>
+            <li><a href="#">Form</a></li>
         </ul>
     </nav>
     <main>
@@ -36,12 +36,12 @@
             <section class="card">
                 <h2>Learning Activities</h2>
                 <ul>
-                    <li><a href="">Week 01:</a></li>
-                    <li><a href="">Week 02:</a></li>
-                    <li><a href="">Week 03:</a></li>
-                    <li><a href="">Week 04:</a></li>
-                    <li><a href="">Week 05:</a></li>
-                    <li><a href="">Week 06:</a></li>
+                    <li><a href="#">Week 01:</a></li>
+                    <li><a href="#">Week 02:</a></li>
+                    <li><a href="#">Week 03:</a></li>
+                    <li><a href="#">Week 04:</a></li>
+                    <li><a href="#">Week 05:</a></li>
+                    <li><a href="#">Week 06:</a></li>
                 </ul>
             </section>
             <section class="card">
