--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development | Deana Briggs | course assignment portal">
     <meta name="author" content="Deana Briggs">
@@ -26,7 +25,7 @@
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="#">Chamber</a></li>
-            <li><a href="#">Site Plan</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
     </nav>
@@ -36,12 +35,14 @@
             <section class="card">
                 <h2>Learning Activities</h2>
                 <ul>
-                    <li><a href="#">Week 01:</a></li>
-                    <li><a href="#">Week 02:</a></li>
-                    <li><a href="#">Week 03:</a></li>
-                    <li><a href="#">Week 04:</a></li>
-                    <li><a href="#">Week 05:</a></li>
-                    <li><a href="#">Week 06:</a></li>
+                    <li>Week 01: <a href="week01/media-query.html">media-query</a> | <a
+                            href="week01/holygrail.html">holygrail</a> | <a
+                            href="week01/chamber-site-plan.html">siteplan</a></li>
+                    <li>Week 02:<a href="#"></a></li>
+                    <li>Week 03:<a href="#"></a></li>
+                    <li>Week 04:<a href="#"></a></li>
+                    <li>Week 05:<a href="#"></a></li>
+                    <li>Week 06:<a href="#"></a></li>
                 </ul>
             </section>
             <section class="card">
