--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -24,10 +24,10 @@
     </header>
     <nav>
         <ul>
-            <li><a>Home</a></li>
-            <li><a>Discover</a></li>
-            <li><a>Directory</a></li>
-            <li><a>Join</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a class="active" href="chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="#">Form</a></li>
         </ul>
     </nav>
     <main>
@@ -84,8 +84,10 @@
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 &bull; Deana Briggs &bull; WDD230</p>
+        <p>&copy; <span id="year"></span> &bull; Deana Briggs &bull; California, USA</p>
+        <p id="lastModified"></p>
     </footer>
+    <script src="scripts/getDates.js" defer></script>
 </body>
 
 </html>
