wk1 fixed auditing errors

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roseville Chamber - Site Plan</title>
-    <meta name="description" content="City of Roseville Chamber of Commerce website - ">
+    <meta name="description" content="Site plan for the city of Roseville Chamber of Commerce website. ">
     <meta name="author" content="Deana Briggs">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
         rel="stylesheet">
 
     <link href="styles/chamber.css" rel="stylesheet">
-    <link href="styles/chamber-larger.css" rel="stylesheet">
+    <link href="styles/chamber-large.css" rel="stylesheet">
 </head>
 
 <body>
