--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -20,17 +20,20 @@
     </header>
     <main>
         <section>
-            <h2>Mosiah 2:41</h2>
-            <p>And moreover, I would desire that ye should consider on the blessed and happy state of those that keep
-                the commandments of God. For behold, they are blessed in all things, both temporal and spiritual; and if
-                they hold out faithful to the end they are received into heaven, that thereby they may dwell with God in
-                a state of never-ending happiness. O remember, remember that these things are true, for the Lord God
-                hath spoken it.</p>
+            <h2>2 Nephi 25:26</h2>
+            <p>And we talk of CHrist, we rejoice in Christ, we preach of Christ, we prophesy of Christ, and we write
+                according to our prophecies, that our children may know to what source they may look for a remission of
+                their sins.</p>
         </section>
         <section>
             <h2>Alma 41:10</h2>
             <p>Do not suppose, because it has been spoken concerning restoration, that ye shall be restored from sin to
                 happiness. Behold, I say unto you, wickedness never was happiness.</p>
+        </section>
+        <section>
+            <h2>Joshua 24:15</h2>
+            <p>And if it seem evil unto you to serve the Lord, choose you this day whom ye will serve... but as for me
+                and my house, we will serve the Lord.</p>
         </section>
     </main>
     <footer>
