--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
                     <li>Week 01: <a href="week01/media-query.html">media-query</a> | <a
                             href="week01/holygrail.html">holygrail</a> | <a
                             href="week01/chamber-site-plan.html">siteplan</a></li>
-                    <li>Week 02:<a href="#"></a></li>
-                    <li>Week 03:<a href="#"></a></li>
-                    <li>Week 04:<a href="#"></a></li>
-                    <li>Week 05:<a href="#"></a></li>
-                    <li>Week 06:<a href="#"></a></li>
+                    <li>Week 02: <a href="week02/design.html">design principles</a></li>
+                    <li>Week 03: <a href="#"></a></li>
+                    <li>Week 04: <a href="#"></a></li>
+                    <li>Week 05: <a href="#"></a></li>
+                    <li>Week 06: <a href="#"></a></li>
                 </ul>
             </section>
             <section class="card">
