--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -10,8 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Mooli&family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Mooli&family=Ysabeau+Infant:ital,wght@0,600;1,800&display=swap"
         rel="stylesheet">
 
     <link href="styles/chamber.css" rel="stylesheet">
@@ -71,7 +70,7 @@
         </div>
         <div class="topics">
             <h2>Wireframe</h2>
-            <section class="content">
+            <section id="wireframes" class="content">
                 <div>
                     <h3>Large Viewport</h3>
                     <img src="images/wireframe-large.JPG" alt="Home Page Wireframe">
