wk2 added favicons

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -15,6 +15,7 @@
 
     <link href="styles/chamber.css" rel="stylesheet">
     <link href="styles/chamber-large.css" rel="stylesheet">
+    <link rel="stylesheet" href="favicon.ico">
 </head>
 
 <body>
