--- a/week01/media-query.html
+++ b/week01/media-query.html
@@ -21,14 +21,9 @@
     <main>
         <section>
             <h2>2 Nephi 25:26</h2>
-            <p>And we talk of CHrist, we rejoice in Christ, we preach of Christ, we prophesy of Christ, and we write
+            <p>And we talk of Christ, we rejoice in Christ, we preach of Christ, we prophesy of Christ, and we write
                 according to our prophecies, that our children may know to what source they may look for a remission of
                 their sins.</p>
-        </section>
-        <section>
-            <h2>Alma 41:10</h2>
-            <p>Do not suppose, because it has been spoken concerning restoration, that ye shall be restored from sin to
-                happiness. Behold, I say unto you, wickedness never was happiness.</p>
         </section>
         <section>
             <h2>Joshua 24:15</h2>
