--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -15,7 +15,7 @@
 
     <link href="styles/chamber.css" rel="stylesheet">
     <link href="styles/chamber-large.css" rel="stylesheet">
-    <link rel="stylesheet" href="favicon.ico">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
