wk2 add social media meta tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development | Deana Briggs | course assignment portal">
     <meta name="author" content="Deana Briggs">
+    <meta property="og:title" content="WDD230 Assignment Portal">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
+    <meta property="og:url" content="https://deanabriggs.github.io/wdd230/">
+
+    <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +20,7 @@
 
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
