added hamburger menu to assignment portal

--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
         <img id="deana" src="images/me.jpg" alt="picture of Deana" width="98" height="143">
         <span>Deana Briggs</span>
     </header>
-    <nav>
-        <ul>
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="#">Chamber</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
-        </ul>
+    <button id="menu"></button>
+    <nav class="navigation">
+        <a class="active" href="index.html">Home</a>
+        <a href="#">Chamber</a>
+        <a href="week01/chamber-site-plan.html">Site Plan</a>
+        <a href="#">Form</a>
     </nav>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
@@ -49,7 +48,8 @@
                         <a href="week01/chamber-site-plan.html">siteplan</a>
                     </li>
                     <li>Week 02:
-                        <a href="week02/design.html">design principles</a>
+                        <a href="week02/design.html">design principles</a> |
+                        <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a>
                     </li>
                     <li>Week 03: <a href="#"></a></li>
                     <li>Week 04: <a href="#"></a></li>
@@ -67,7 +67,8 @@
         <p>&copy; <span id="year"></span> &bull; Deana Briggs &bull; California, USA</p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/getDates.js"></script>
+    <script src="scripts/menu.js"></script>
 </body>
 
 </html>
