wk2 BOM DOM application

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                     </li>
                     <li>Week 02:
                         <a href="week02/design.html">design principles</a> |
-                        <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a>
+                        <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a> |
+                        <a href="week02/bom.html">BOM Top 10</a>
                     </li>
                     <li>Week 03: <a href="#"></a></li>
                     <li>Week 04: <a href="#"></a></li>
