wk2 - added aria-label to menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img id="deana" src="images/me.jpg" alt="picture of Deana" width="98" height="143">
         <span>Deana Briggs</span>
     </header>
-    <button id="menu"></button>
+    <button aria-label="menu" id="menu"></button>
     <nav class="navigation">
         <a class="active" href="index.html">Home</a>
         <a href="#">Chamber</a>
@@ -53,10 +53,10 @@
                         <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a> |
                         <a href="week02/bom.html">BOM Top 10</a>
                     </li>
-                    <li>Week 03: <a href="#"></a></li>
-                    <li>Week 04: <a href="#"></a></li>
-                    <li>Week 05: <a href="#"></a></li>
-                    <li>Week 06: <a href="#"></a></li>
+                    <li>Week 03: <a href="#"> </a></li>
+                    <li>Week 04: <a href="#"> </a></li>
+                    <li>Week 05: <a href="#"> </a></li>
+                    <li>Week 06: <a href="#"> </a></li>
                 </ul>
             </section>
             <section class="card">
