wk2 add dark mode

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <header>
+        <div id="drkMode">🕶️</div>
         <img id="deana" src="images/me.jpg" alt="picture of Deana" width="98" height="143">
         <span>Deana Briggs</span>
     </header>
@@ -53,15 +54,15 @@
                         <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a> |
                         <a href="week02/bom.html">BOM Top 10</a>
                     </li>
-                    <li>Week 03: <a href="#"> </a></li>
-                    <li>Week 04: <a href="#"> </a></li>
-                    <li>Week 05: <a href="#"> </a></li>
-                    <li>Week 06: <a href="#"> </a></li>
+                    <li>Week 03: <a href="#">not yet</a></li>
+                    <li>Week 04: <a href="#">not yet</a></li>
+                    <li>Week 05: <a href="#">not yet</a></li>
+                    <li>Week 06: <a href="#">not yet</a></li>
                 </ul>
             </section>
             <section class="card">
                 <h2>Information</h2>
-                <div></div>
+                <div>Weather will be here</div>
             </section>
         </div>
     </main>
@@ -71,6 +72,8 @@
     </footer>
     <script src="scripts/getDates.js"></script>
     <script src="scripts/menu.js"></script>
+    <script src="scripts/dark.js"></script>
 </body>
+
 
 </html>
