wk2 added defer to script

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <p>&copy; <span id="year"></span> &bull; Deana Briggs &bull; California, USA</p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getDates.js"></script>
-    <script src="scripts/menu.js"></script>
-    <script src="scripts/dark.js"></script>
+    <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/menu.js" defer></script>
+    <script src="scripts/dark.js" defer></script>
 </body>
 
 
