wk2 Chamber mile stone

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 230 - Web Frontend Development | Deana Briggs | course assignment portal">
     <meta name="author" content="Deana Briggs">
+
     <meta property="og:title" content="WDD230 Assignment Portal">
     <meta property="og:type" content="website">
-    <meta property="og:image"
-        content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
+    <meta property="og:image" content="https://s3-media0.fl.yelpcdn.com/bphoto/sK3sR0uy41KAZe-No8VD4w/1000s.jpg">
     <meta property="og:url" content="https://deanabriggs.github.io/wdd230/">
 
     <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
