--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -8,6 +8,13 @@
     <meta name="description" content="Site plan for the city of Roseville Chamber of Commerce website. ">
     <meta name="author" content="Deana Briggs">
 
+    <meta property="og:title" content="WDD230 Assignment Portal">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
+    <meta property="og:url" content="https://deanabriggs.github.io/wdd230/">
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mooli&family=Ysabeau+Infant:ital,wght@0,600;1,800&display=swap"
