--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <button aria-label="menu" id="menu"></button>
     <nav class="navigation">
         <a class="active" href="index.html">Home</a>
-        <a href="#">Chamber</a>
+        <a href="chamber/index.html">Chamber</a>
         <a href="week01/chamber-site-plan.html">Site Plan</a>
         <a href="#">Form</a>
     </nav>
