Updated title on Chamber html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home-Roseville Chamber</title>
+    <title>Home-Roseville Chamber of Commerce</title>
     <meta name="description" content="Home page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
