--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                         <a href="https://codepen.io/Deana-Briggs/pen/MWRddEB">codepen-menu</a> |
                         <a href="week02/bom.html">BOM Top 10</a>
                     </li>
-                    <li>Week 03: <a href="#">not yet</a></li>
+                    <li>Week 03:
+                        <a href="week03/images/landscape.webp">WebP</a>
+                    </li>
                     <li>Week 04: <a href="#">not yet</a></li>
                     <li>Week 05: <a href="#">not yet</a></li>
                     <li>Week 06: <a href="#">not yet</a></li>
