--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     </li>
                     <li>Week 03:
                         <a href="week03/images/landscape.webp">WebP</a>
+                        <a href="week03/lazyload.html">Lazy Load</a>
                     </li>
                     <li>Week 04: <a href="#">not yet</a></li>
                     <li>Week 05: <a href="#">not yet</a></li>
