wk3 BOM local storage

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
                         <a href="week02/bom.html">BOM Top 10</a>
                     </li>
                     <li>Week 03:
-                        <a href="week03/images/landscape.webp">WebP</a>
-                        <a href="week03/lazyload.html">Lazy Load</a>
+                        <a href="week03/images/landscape.webp">webp</a> |
+                        <a href="week03/lazyload.html">lazy load</a> |
+                        <a href="week03/responsive-images.html">responsive images</a> |
+                        <a href="week03/bom.html">BOM storage</a>
                     </li>
                     <li>Week 04: <a href="#">not yet</a></li>
                     <li>Week 05: <a href="#">not yet</a></li>
