--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <div id="drkMode">🕶️</div>
-        <img id="deana" src="images/me.jpg" alt="picture of Deana" width="98" height="143">
+        <img id="deana" src="images/me.webp" alt="picture of Deana" width="100" height="154">
         <span>Deana Briggs</span>
     </header>
     <button aria-label="menu" id="menu"></button>
@@ -38,6 +38,13 @@
         <a href="week01/chamber-site-plan.html">Site Plan</a>
         <a href="#">Form</a>
     </nav>
+    <div class="hero">
+        <label id="hero-label">Sacramento Temple</label>
+        <picture>
+            <source media="(max-width: 400px)" srcset="images/temple-sm.webp">
+            <img src="images/temple-lrg.webp" alt="temple" width="960" height="601">
+        </picture>
+    </div>
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
         <div class="parent">
@@ -68,7 +75,18 @@
             <section class="card">
                 <h2>Information</h2>
                 <div>Weather will be here</div>
+                <p>
+                    <span class="label">Number of Visits: </span>
+                    <span class="visits"></span>
+                </p>
             </section>
+        </div>
+        <div class="map">
+            <h2>City Location</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34972.32810043367!2d-121.30558330972858!3d38.762576674900615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809b1f65623c1879%3A0x22af4a52ba493999!2sRoseville%2C%20CA!5e0!3m2!1sen!2sus!4v1715536765676!5m2!1sen!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </main>
     <footer>
@@ -78,7 +96,7 @@
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
     <script src="scripts/dark.js" defer></script>
+    <script src="scripts/visits.js" defer></script>
 </body>
-
 
 </html>
