wk3 change label eliment to paragraph

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="#">Form</a>
     </nav>
     <div class="hero">
-        <label id="hero-label">Sacramento Temple</label>
+        <p id="hero-label">Sacramento Temple</p>
         <picture>
             <source media="(max-width: 400px)" srcset="images/temple-sm.webp">
             <img src="images/temple-lrg.webp" alt="temple" width="960" height="601">
