wk3 chamber discover page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,12 +28,12 @@
 
 <body>
     <header>
-        <h1>Roseville <br>Chamber of Commerce</h1>
+        <h1 id="hero-header">Roseville <br>Chamber of Commerce</h1>
     </header>
     <button aria-label="menu" id="menu"></button>
     <nav class="nav">
         <a class="active" href="index.html">Home</a>
-        <a href="#">Discover</a>
+        <a href="discover.html">Discover</a>
         <a href="#">Directory</a>
         <a href="#">Join</a>
     </nav>
