wk3 chamber discover audit adjustments

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover-Roseville Chamber of Commerce</title>
-    <meta name="description" content="Home page for the City of Roseville Chamber of Commerce">
+    <meta name="description" content="Discover page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
     <meta property="og:title" content="WDD230 Assignment Portal">
