wk4 pseudo class codepen

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                         <a href="week03/responsive-images.html">responsive images</a> |
                         <a href="week03/bom.html">BOM storage</a>
                     </li>
-                    <li>Week 04: <a href="#">not yet</a></li>
+                    <li>Week 04:
+                        <a href="https://codepen.io/Deana-Briggs/pen/KKLpYOr">pseudo-class</a>
+                    </li>
                     <li>Week 05: <a href="#">not yet</a></li>
                     <li>Week 06: <a href="#">not yet</a></li>
                 </ul>
