wk4 prepare table

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                         <a href="week03/bom.html">BOM storage</a>
                     </li>
                     <li>Week 04:
-                        <a href="https://codepen.io/Deana-Briggs/pen/KKLpYOr">pseudo-class</a>
+                        <a href="https://codepen.io/Deana-Briggs/pen/KKLpYOr">pseudo-class</a> |
+                        <a href="images/w3s-exercises.webp">w3s-exercises</a> |
+                        <a href="week04/tablebuild.html">table</a>
                     </li>
                     <li>Week 05: <a href="#">not yet</a></li>
                     <li>Week 06: <a href="#">not yet</a></li>
