wk4 team form activity

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development | Deana Briggs | course assignment portal">
     <meta name="author" content="Deana Briggs">
 
@@ -11,8 +12,6 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://s3-media0.fl.yelpcdn.com/bphoto/sK3sR0uy41KAZe-No8VD4w/1000s.jpg">
     <meta property="og:url" content="https://deanabriggs.github.io/wdd230/">
-
-    <title>Deana Briggs - WDD 230 - Web Frontend Development</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +35,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="chamber/index.html">Chamber</a>
         <a href="week01/chamber-site-plan.html">Site Plan</a>
-        <a href="#">Form</a>
+        <a href="form.html">Form</a>
     </nav>
     <div class="hero">
         <p id="hero-label">Sacramento Temple</p>
@@ -70,7 +69,8 @@
                     <li>Week 04:
                         <a href="https://codepen.io/Deana-Briggs/pen/KKLpYOr">pseudo-class</a> |
                         <a href="images/w3s-exercises.webp">w3s-exercises</a> |
-                        <a href="week04/tablebuild.html">table</a>
+                        <a href="week04/tablebuild.html">table</a> |
+                        <a href="week04/Form-start/index.html">form</a>
                     </li>
                     <li>Week 05: <a href="#">not yet</a></li>
                     <li>Week 06: <a href="#">not yet</a></li>
