adjust dark mode to have some functionality on form page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header>
-        <div id="drkMode">🕶️</div>
+        <div class="drkMode">🕶️</div>
         <img id="deana" src="images/me.webp" alt="picture of Deana" width="100" height="154">
         <span>Deana Briggs</span>
     </header>
