wk4 adj form for 1-10 range

--- a/form.html
+++ b/form.html
@@ -57,10 +57,9 @@
 
             <fieldset>
                 <legend>Your Opinion</legend>
-                <label>Page Rating <input id="range" type="range" name="range" min="0" max="10" value="0" step="1"
+                <label>Page Rating <input id="range" type="range" name="range" min="1" max="10" value="0" step="1"
                         list="rangevalues"></label>
                 <datalist id="rangevalues">
-                    <option value="0">0</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -72,7 +71,7 @@
                     <option value="9">9</option>
                     <option value="10">10</option>
                 </datalist>
-                <div>Rating Selected: <span id="rating">0</span></div>
+                <div>Rating Selected: <span id="rating"></span></div>
             </fieldset>
 
             <input type="submit" value="Share Your Opinion">
