adj chamber site: img captions, header, call to action

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -70,15 +70,43 @@
             </section>
         </aside>
         <div class="discover-pics">
-            <img src="images/train.webp" alt="steam engine monument" loading="lazy" width="600" height="375">
-            <img src="images/transcontinental.webp" alt="transcontinental monument" loading="lazy" width="600"
-                height="375">
-            <img src="images/sunsplash.webp" alt="sunsplash" loading="lazy" width="600" height="375">
-            <img src="images/topgolf.webp" alt="top golf" loading="lazy" width="600" height="375">
-            <img src="images/bowling.webp" alt="round1 bowling" loading="lazy" width="600" height="375">
-            <img src="images/xtreme.webp" alt="xtreme craze" loading="lazy" width="600" height="292">
-            <img src="images/wacky.webp" alt="wacky tacky" loading="lazy" width="600" height="375">
-            <img src="images/pizza.webp" alt="Incredible john's pizza" loading="lazy" width="600" height="375">
+            <div>
+                <img src="images/sculpture.webp" alt="steam engine monument" loading="lazy" width="600" height="375">
+                <p class="caption">Olympus Pointe Sculpture Park</p>
+            </div>
+            <div>
+                <img src="images/train.webp" alt="steam engine monument" loading="lazy" width="600" height="375">
+                <p class="caption">Locomotive No. 2252 Display</p>
+            </div>
+            <div>
+                <img src="images/transcontinental.webp" alt="transcontinental monument" loading="lazy" width="600"
+                    height="375">
+                <p class="caption">First Transcontinental Railroad Landmark</p>
+            </div>
+            <div>
+                <img src="images/sunsplash.webp" alt="sunsplash" loading="lazy" width="600" height="375">
+                <p class="caption">Golfland Sunsplash</p>
+            </div>
+            <div>
+                <img src="images/topgolf.webp" alt="top golf" loading="lazy" width="600" height="375">
+                <p class="caption">Topgolf</p>
+            </div>
+            <div>
+                <img src="images/bowling.webp" alt="round1 bowling" loading="lazy" width="600" height="375">
+                <p class="caption">Round1 Bowling & Arcade</p>
+            </div>
+            <div>
+                <img src="images/xtreme.webp" alt="xtreme craze" loading="lazy" width="600" height="292">
+                <p class="caption">Xtreme Craze</p>
+            </div>
+            <div>
+                <img src="images/wacky.webp" alt="wacky tacky" loading="lazy" width="600" height="375">
+                <p class="caption">Wacky Tacky</p>
+            </div>
+            <div>
+                <img src="images/pizza.webp" alt="Incredible john's pizza" loading="lazy" width="600" height="375">
+                <p class="caption">Incredible John's Pizza</p>
+            </div>
         </div>
     </main>
     <footer>
