--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,9 +42,8 @@
             <img src="images/roseville-roses.webp" alt="Roseville Civic Center with roses">
         </div>
         <div class="action">
-            <a href="#">Discover</a>
-            <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <button aria-label="join" id="join">Become a Member<a href="#"></a></button>
+
         </div>
         <section class="info">
             <h2>Community Information</h2>
