--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -32,9 +32,9 @@
     <nav>
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="chamber/index.html">Chamber</a></li>
+            <li><a href="/chamber/index.html">Chamber</a></li>
             <li><a class="active" href="chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="form.html">Form</a></li>
+            <li><a href="/form.html">Form</a></li>
         </ul>
     </nav>
     <main>
