wk4 - start of form

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Home page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
-    <meta property="og:title" content="WDD230 Assignment Portal">
+    <meta property="og:title" content="WDD230 Chamber of Commerce Project">
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
@@ -28,14 +28,14 @@
 
 <body>
     <header>
-        <h1 id="hero-header">Roseville <br>Chamber of Commerce</h1>
+        <h1>Roseville <br>Chamber of Commerce</h1>
     </header>
     <button aria-label="menu" id="menu"></button>
     <nav class="nav">
         <a class="active" href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="#">Directory</a>
-        <a href="#">Join</a>
+        <a href="form.html">Join</a>
     </nav>
     <main>
         <div id="hero">
