--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Discover page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
-    <meta property="og:title" content="WDD230 Assignment Portal">
+    <meta property="og:title" content="WDD230 Chamber of Commerce Project">
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
@@ -35,7 +35,7 @@
         <a href="index.html">Home</a>
         <a class="active" href="#">Discover</a>
         <a href="#">Directory</a>
-        <a href="#">Join</a>
+        <a href="form.html">Join</a>
     </nav>
 
     <main id="discover-main">
