--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -26,7 +26,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
-<body class="pgJoin">
+<body>
     <header>
         <h1>Roseville <br>Chamber of Commerce</h1>
     </header>
