Chamber - added aside to large view

--- a/chamber/form.html
+++ b/chamber/form.html
@@ -39,6 +39,30 @@
     </nav>
     <main>
         <h2>Become A Member</h2>
+
+        <aside id="asideJoin">
+            <h3>Benefits</h3>
+            <div>
+                <h4>NP Membership</h4>
+                <p>Available to only non-profit organizations. No cost membership.</p>
+            </div>
+            <div>
+                <h4>Bronze Membership</h4>
+                <p>Includes ribbon cutting ceremony with a 1-day spotlight post and one free networking event ticket.
+                </p>
+            </div>
+            <div>
+                <h4>Silver Membership</h4>
+                <p>Includes ribbon cutting ceremony with a 3-day spotlight post and two free networking event tickets.
+                </p>
+            </div>
+            <div>
+                <h4>Gold Membership</h4>
+                <p>Includes ribbon cutting ceremony with a 1-week spotlight post, two free networking event tickets, and
+                    one free marketing email blast.</p>
+            </div>
+        </aside>
+
         <form method="get" action="thankyou.html" class="fmJoin">
             <fieldset>
                 <legend>Primary Contact</legend>
