--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
                         <a href="week04/tablebuild.html">table</a> |
                         <a href="week04/Form-start/index.html">form</a>
                     </li>
-                    <li>Week 05: <a href="#">not yet</a></li>
+                    <li>Week 05: <a href="https://codepen.io/Deana-Briggs/pen/bGypypW">pseudo-element</a>
+                    </li>
                     <li>Week 06: <a href="#">not yet</a></li>
                 </ul>
             </section>
