chamber adj form file name

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,7 +35,7 @@
         <a class="active" href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="#">Directory</a>
-        <a href="form.html">Join</a>
+        <a href="join.html">Join</a>
     </nav>
     <main>
         <div id="hero">
