--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -35,7 +35,7 @@
         <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
         <a href="#">Directory</a>
-        <a class="active" href="form.html">Join</a>
+        <a class="active" href="join.html">Join</a>
     </nav>
     <main class="thankyou">
         <h2>Recieved!</h2>
