--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,7 +35,7 @@
         <a href="index.html">Home</a>
         <a class="active" href="#">Discover</a>
         <a href="#">Directory</a>
-        <a href="form.html">Join</a>
+        <a href="join.html">Join</a>
     </nav>
 
     <main id="discover-main">
