wk-prepare weather API

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     <li>Week 05:
                         <a href="https://codepen.io/Deana-Briggs/pen/bGypypW">pseudo-element</a> |
                         <a href="week05/new-ward-members.json">json</a> |
-                        <a href="week05/prophets.html">fetch api</a>
+                        <a href="week05/prophets.html">fetch api</a> |
+                        <a href="week05/weather.html">weather api</a>
                     </li>
                     <li>Week 06: <a href="#">not yet</a></li>
                 </ul>
