wk5 Async Links

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
             </section>
             <section class="card">
                 <h2>Information</h2>
-                <div>Weather will be here</div>
+                <figure>
+                    <img id="hw-weather-icon" src="" alt="">
+                    <span id="hw-current-temp"></span>
+                    <figcaption></figcaption>
+                </figure>
                 <p>
                     <span class="label">Number of Visits: </span>
                     <span class="visits"></span>
@@ -106,6 +110,7 @@
     <script src="scripts/menu.js" defer></script>
     <script src="scripts/dark.js" defer></script>
     <script src="scripts/visits.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
 </body>
 
 </html>
