--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="parent">
             <section class="card">
                 <h2>Learning Activities</h2>
-                <ul>
+                <ul id="assignments">
                     <li>Week 01:
                         <a href="week01/media-query.html">media-query</a> |
                         <a href="week01/holygrail.html">holygrail</a> |
@@ -78,7 +78,6 @@
                         <a href="week05/prophets.html">fetch api</a> |
                         <a href="week05/weather.html">weather api</a>
                     </li>
-                    <li>Week 06: <a href="#">not yet</a></li>
                 </ul>
             </section>
             <section class="card">
@@ -111,6 +110,7 @@
     <script src="scripts/dark.js" defer></script>
     <script src="scripts/visits.js" defer></script>
     <script src="scripts/weather.js" defer></script>
+    <script src="scripts/links.js" defer></script>
 </body>
 
 </html>
