--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
         <div class="parent">
-            <section class="card">
+            <section class="card" id="activities">
                 <h2>Learning Activities</h2>
                 <ul id="assignments">
                     <li>Week 01:
