chamber JSON file

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join-Roseville Chamber of Commerce</title>
-    <meta name="description" content="Thank you page for the City of Roseville Chamber of Commerce">
+    <title>Directory-Roseville Chamber of Commerce</title>
+    <meta name="description" content="Directory page for the City of Roseville Chamber of Commerce">
     <meta name="author" content="Deana Briggs">
     <!--Social Media Content-->
     <meta property="og:title" content="WDD230 Chamber of Commerce Project">
@@ -34,12 +34,17 @@
     <nav class="nav">
         <a href="index.html">Home</a>
         <a href="discover.html">Discover</a>
-        <a href="directory.html">Directory</a>
-        <a class="active" href="join.html">Join</a>
+        <a class="active" href="directory.html">Directory</a>
+        <a href="join.html">Join</a>
     </nav>
-    <main class="thankyou">
-        <h2>Recieved!</h2>
-        <p>Your membership application has been received and will be processed.</p>
+    <main>
+        <div class="menu">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
+        <section class="cards">
+
+        </section>
     </main>
     <footer>
         <p>
