--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://cdnsm5-hosted.civiclive.com/UserFiles/Servers/Server_7964838/Image/News/CivicCenter770x540.jpg">
-    <meta property="og:url" content="https://deanabriggs.github.io/wdd230/">
+    <meta property="og:url" content="https://deanabriggs.github.io/wdd230/chamber/index.html">
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
     <nav class="nav">
         <a href="index.html">Home</a>
         <a class="active" href="#">Discover</a>
-        <a href="#">Directory</a>
+        <a href="directory.html">Directory</a>
         <a href="join.html">Join</a>
     </nav>
 
