update link for chamber member data in js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,7 +42,7 @@
             <button id="grid">Grid</button>
             <button id="list">List</button>
         </div>
-        <section class="cards">
+        <section id="members">
 
         </section>
     </main>
