correct members.json name

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -56,6 +56,7 @@
     </footer>
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
+    <script src="scripts/members.js" defer></script>
 </body>
 
 </html>
