--- a/chamber/join.html
+++ b/chamber/join.html
@@ -111,6 +111,7 @@
     </footer>
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
+    <script src="scripts/join.js" defer></script>
 </body>
 
 </html>
