assignment portal -resolve validation issue

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <main>
         <h1>WDD 230: Web Frontend Development</h1>
         <div class="parent">
-            <section class="card" id="activities">
+            <div class="card" id="activities">
 
-            </section>
+            </div>
             <section class="card">
                 <h2>Information</h2>
                 <figure>
-                    <img id="hw-weather-icon" src="" alt="">
+                    <img id="hw-weather-icon" src="#" alt="">
                     <span id="hw-current-temp"></span>
                     <figcaption></figcaption>
                 </figure>
