--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,9 +42,9 @@
             <button id="grid">Grid</button>
             <button id="list">List</button>
         </div>
-        <section id="members">
+        <div id="members">
 
-        </section>
+        </div>
     </main>
     <footer>
         <p>
