chamber directory list and grid

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,12 +37,13 @@
         <a class="active" href="directory.html">Directory</a>
         <a href="join.html">Join</a>
     </nav>
-    <main>
+    <main id="directory">
+        <h2>Member Directory</h2>
         <div class="menu">
-            <button id="grid">Grid</button>
-            <button id="list">List</button>
+            <button id="grid">🔳 Grid</button>
+            <button id="list">📄 List</button>
         </div>
-        <div id="members">
+        <div id="members" class="grid">
 
         </div>
     </main>
