directory - fix logos

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -68,7 +68,11 @@
         </section>
         <section class="weather">
             <h2>Weather</h2>
-            <img src="#" alt="current weather with picture">
+            <figure>
+                <img id="rsvl-weather-icon" src="#" alt="">
+                <span id="rsvl-current-temp"></span>
+                <figcaption></figcaption>
+            </figure>
         </section>
         <section class="spotlight">
             <h2>Spotlight Advertisement</h2>
@@ -90,6 +94,7 @@
     </footer>
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
 </body>
 
 </html>
