--- a/chamber/index.html
+++ b/chamber/index.html
@@ -68,7 +68,8 @@
         </section>
         <section class="weather">
             <h2>Weather</h2>
-            <figure>
+            <figure class="current">
+                <h3>Current</h3>
                 <img id="rsvl-weather-icon" src="#" alt="">
                 <span id="rsvl-current-temp"></span>
                 <figcaption></figcaption>
