update JSON for advertisements

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -77,8 +77,8 @@
         </section>
         <section class="spotlight">
             <h2>Spotlight Advertisement</h2>
-            <img src="#" alt="picture of business or logo">
             <div>
+                <img src="#" alt="picture of business or logo">
                 <h3>Name of Business</h3>
                 <p>Advertisement of some sort that would be appealing to viewers. Could include recognition or recent
                     business event. Should include location and contact info.</p>
@@ -96,6 +96,8 @@
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/menu.js" defer></script>
     <script src="scripts/weather.js" defer></script>
+    <script src="scripts/spotlight.js" defer></script>
 </body>
+
 
 </html>
